--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "preview:tunnel": "vite build && vite preview --host"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.18.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "three": "^0.160.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
